--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "walk-tour",
   "description": "The easiest way to show people how to use your website and What's New In It",
   "main": "walk-tour.html",
-  "version":"0.0.13",
+  "version": "2.0.0",
   "authors": [
     "Gitesh Goyal <giteshgoyal77@gmail.com>",
     "Janit Bidhan  <janitbidhan@gmail.com>",
@@ -26,21 +26,20 @@
     "web-components",
     "custom-element"
   ],
-  "homepage": "https://github.com/giteshgoyal/webhelp-element-polymer.git",
+  "homepage": "https://github.com/aruntk/walk-tour.git",
   "dependencies": {
-    "app-storage":"PolymerElements/app-storage#^0.9.4",
-    "iron-a11y-keys":"PolymerElements/iron-a11y-keys#^1.0.0",
-    "iron-icon":"PolymerElements/iron-icon#^1.0.0",
-    "iron-iconset-svg" :"PolymerElements/iron-iconset-svg#^1.0.0",
-    "iron-signals":"PolymerElements/iron-signals#^1.0.0",
-    "paper-icon-button":"PolymerElements/paper-icon-button#^1.0.0",
-    "polymer": "Polymer/polymer#^1.1.1"
+    "app-storage":"PolymerElements/app-storage#^2.0.0",
+    "iron-a11y-keys":"PolymerElements/iron-a11y-keys#^2.0.0",
+    "iron-icon":"PolymerElements/iron-icon#^2.0.0",
+    "iron-iconset-svg" :"PolymerElements/iron-iconset-svg#^2.0.0",
+    "paper-icon-button":"PolymerElements/paper-icon-button#^2.0.0",
+    "polymer": "Polymer/polymer#^2.0.0"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-    "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "iron-component-page": "PolymerElements/iron-component-page#^2.0.0",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0"
   },
   "ignore": [
     "**/.*",
